# fastapi_one

./: .coverage  .env  .gitignore  database.db  pyproject.toml
fastapi_tcc/: app.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 0b5d1de7affd_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
